maybe fixing overflow x

--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 
-.site {
-    overflow-x: hidden;
-}
+
 #about {
   /* height: 50%; */
   background-color: #303131;
@@ -24,7 +22,9 @@ html {
   /* height: 100%; */
   background-color: #303131;
 }
-
+.site-wrapper {
+    overflow-x: hidden;
+}
 #bg-img {
   background: url(../img/background.jpg);
   background-attachment: fixed;
